# Learn_code

C++_learn/: Learn_C++.sln  file.txt
C++_learn/BypassAV/: BypassAV.vcxproj  BypassAV.vcxproj.filters  fud-uuid-shc.cpp
C++_learn/BypassAV/Debug/: BypassAV.exe.recipe  BypassAV.ilk  vc142.idb
C++_learn/Project1/: 001.cpp  C#C++C++能运行的小程序Project1pile.txt  Project1.vcxproj  Project1.vcxproj.filters  cpu_num.cpp  ctpl_stl.h  decode_encode.cpp  do_Isass.cpp  do_request.cpp  file.txt  finish_done.cpp  first.cpp  heart.cpp  http_function.cpp  http_header.cpp  loader.cpp  my_thread.cpp  post_form.cpp  post_form_file.cpp  post_json.cpp  read_file.cpp  test.cpp  test_http.cpp  test_thread.cpp  thread_example.cpp
C++_learn/Project1/Debug/: Project1.exe.recipe  Project1.ilk  vc142.idb
Rust_learn/: Cargo.toml
Rust_learn/src/01/test_backdoor/: Cargo.toml
Rust_learn/src/01/test_backdoor/src/: main.rs
Rust_learn/src/do_request/: Cargo.toml
Rust_learn/src/do_thread/: Cargo.toml
Rust_learn/src/do_thread/src/: do_thread_async.rs  do_thread_blocking.rs  main.rs
Rust_learn/src/file_operate/: path_to_your_file.txt  read_file.rs  write_file.rs
Rust_learn/src/test_Encrypt/: Cargo.toml
Rust_learn/src/test_backdoor/: build.rs
Rust_learn/src/test_desktop/: Cargo.toml
Rust_learn/src/test_gtk_rs/: Cargo.toml
Rust_learn/src/test_socket/: Cargo.toml
leanr_GO/Network_Code/: 01.go
leanr_GO/encrypt/: go.mod
leanr_GO/encrypt/RC5/: 3DES.go  (+4 more)
leanr_GO/网络请求/: POST_Formfield_file.go  POST_photo.go  douyin_json.go  go.mod  go.sum  master_worker_test.go  test_thread.go
(+51 files in other folders)
