[package]
name = "do_thread"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
once_cell = "1.18.0"
#reqwest = "0.11.20"
reqwest = { version = "0.11.20", features = ["json", "multipart","blocking"] }   #安装reqwest包的0.11.20版本,并启用json和multipart两个功能特性。
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"

