[package]
name = "test_backdoor"
version = "0.1.0"
edition = "2021"
#build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features =["blocking"]}
winapi = "0.3"
#winapi-util = "0.1"
windows = "0.41"
